projects/rhodes.akn/src/infrastructure/kubernetes/newt/security/network-policy.allow-newt-to-pocket-id.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  annotations:
    policy.networking.k8s.io/description: |
      Allows Newt to access the Pocket ID application.
  name: allow-newt-to-pocket-id
  namespace: newt-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: newt
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: pocket-id
            app.kubernetes.io/name: pocket-id
      toPorts:
        - ports:
            - port: "1411"
              protocol: TCP
